# elevate_compile_challenge

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: debug.yml
.github/workflows/: docker-image.yml  workflow.yml
src/: app.py  poppet_holder.tif  test_app.py
